# AI_Operating_System

./: .dockerignore  .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  CACHING.md  CHANGELOG.md  CI.md  CONTRIBUTING.md  CREDENTIALS.md  Dockerfile  IMPROVEMENTS.md  LICENSE  MANIFEST.in  MANUAL_TESTS.md  PLUGINS.md  RATELIMIT.md  README.md  SECURITY.md  SESSIONS.md  SKILLS.md  docker-compose.yml  install.sh  pyproject.toml  requirements.txt  setup.py
.claude/skills/: docker.md  docs.md
.github/workflows/: docker.yml  publish.yml  snap.yml  test.yml
aios/: __init__.py  cache.py  config.py  credentials.py  errors.py  main.py  models.py  plugins.py  prompts.py  ratelimit.py  shell.py  skills.py  stats.py  widgets.py
aios/claude/: __init__.py  client.py  tools.py
aios/code/: __init__.py  detector.py  runner.py
aios/commands/: __init__.py  code.py  config.py  display.py  (+3 more)
config/: default.toml
docs/: MULTI_PROVIDER_LLM.md  OPENAI_IMPLEMENTATION.md
plugins/: ANSIBLE_NETWORK.md  README.md
skills/: ANSIBLE_NETWORK.md  README.md  ansible_network.py
snap/: snapcraft.yaml
tests/: __init__.py  conftest.py  test_ansible_plugin.py  test_ansible_skill.py  test_cache.py  test_code.py  test_completions.py  test_config.py  test_context_manager.py  test_context_window.py  test_errors.py  test_files.py  test_handlers.py  test_linux_tools.py  test_plugins.py  test_progress.py  test_prompts.py  test_ratelimit.py  test_retry.py  test_safety.py  test_sandbox.py  test_session.py  test_shell_sudo.py  test_skills.py  test_stats.py  test_streaming.py  test_streaming_display.py  test_tasks.py
(+32 files in other folders)
